pages/guide/v5/11.5-asyncapi.md
---
layout: guide
group: guide
subtopic: true
title: Async API
version: 5
---

## Overview

Elide APIs are designed for synchronous request and response behavior. The time allowed to service a synchronous response can be limited by proxy servers and gateways. Analytic queries can often take longer than these limits and result in a server timeout. Elide's asynchronous API decouples the submission of a request and the delivery of the response into separate client calls. Some of the features available are:
* Queries are run in a background thread that posts the results into a persistence store.
* Results can be retrieved as an embedded response or URL for downloading later.
* Supported downloading formats - CSV and JSON.
* Queries can be configured to execute synchronously before switching to asynchronous mode if not finished by a client provided threshold.
* Queries that are interrupted due to an application crash/reboot are automatically flagged as TIMEDOUT.
* Persisted queries and results are deleted after a configurable threshold.

## Design

#### API
The Async API supports two different query abstractions built using standard Elide models (AsyncQuery and TableExport):
* Any read-only API request in JSON-API or GraphQL can be submitted by creating an AsyncQuery object. After creation, the client can poll the AsyncQuery object asynchronously for status updates. Once complete, the AsyncQuery object stores the query result as an embedded attribute.
* For large response bodies, Elide supports a streaming abstraction called TableExport. It works similarly to the AsyncQuery model but with three important differences:
   * TableExport can only be leveraged when:
      * The query is a simple read.
      * The model being queried has no relationships.
      * Only one model is being queried in the request.
   * Upon successful completion, the TableExport model includes a separate URL attribute that references the query results for streaming downloads.
   * The results of the GraphQL or JSON-API query are converted into a simple, flat JSON or CSV format.

Example API requests and responses can be found [here]({{site.baseurl}}/pages/guide/v{{ page.version }}/11.5-asyncapi.html#running).

#### Threading
Each Elide instance runs a scheduler that is responsible for executing these requests in background threads. New async requests are initially marked in the QUEUED state. The requests are picked for execution as the threads become available. Upon completion, the background thread posts the query status and results to a persistent store. The size of the thread pool can be configured as mentioned [here]({{site.baseurl}}/pages/guide/v{{ page.version }}/11.5-asyncapi.html#additional-configuration).

#### Async After
The Async requests can be configured to execute synchronously before switching to asynchronous mode. The requests not finished synchronously by the client provided threshold are handed off to a separate thread for posting the results once complete. The default value for `asyncAfterSeconds` is 10 seconds. Setting `asyncAfterSeconds` to 0 will execute the request in asynchronous mode upon submission.

#### Background Cleaner
Each Elide instance will also run a scheduler for maintenance and cleanup.
* It cleans up requests and results stored in the persistent store.
* It scans and flags the queries that failed due to an application crash/reboot automatically as TIMEDOUT.
* It is responsible for the graceful cancellation of async requests.
  * The user can update the status of the async requests to CANCELLED. The cleaner polls the AsyncQuery and TableExport models to find any new requests that were CANCELLED and tries to terminate the transaction associated with that execution and change the status to CANCEL_COMPLETE.
  * Long-running transactions that exceed the run time threshold are terminated. Any background thread executing the original request is interrupted.
* The retention, polling interval, and max run time thresholds can be configured during application startup.
* This scheduler can be disabled by setting `cleanupEnabled` to false as mentioned [here]({{site.baseurl}}/pages/guide/v{{ page.version }}/11.5-asyncapi.html#enable-the-async-api).

#### TableExport Results Download
Elide has built-in support for streaming the results of a TableExport request through the export endpoint. Upon successful completion, the TableExport model includes a separate URL attribute where results can be downloaded from.

Enabling the end-point, timeouts, path, etc. can be configured during application startup as mentioned [here]({{site.baseurl}}/pages/guide/v{{ page.version }}/11.5-asyncapi.html#additional-configuration).

#### Supported Query Types

Below are the supported values for query type in asynchronous calls:

* GRAPHQL_V1_0
* JSONAPI_V1_0

#### Supported Result Types

Elide can transform the results into a pre-selected format while persisting them via the [ResultStorageEngine]({{site.baseurl}}/pages/guide/v{{ page.version }}/11.5-asyncapi.html#overriding-the-resultstorageengine). Below are the supported formats for Table Export results:

* JSON
* CSV

#### Query Status

Below are the different states of an asynchronous request:

| Status          | Description                                                                           |
| --------------- | ------------------------------------------------------------------------------------- |
| QUEUED          | Request is submitted and waiting to be picked up for execution.                 |
| PROCESSING      | Request has been picked up for execution.                                       |
| COMPLETE        | Request has completed.                                                          |
| CANCELLED       | The client has requested to cancel a running request.                           |
| TIMEDOUT        | Request did not finish within the configured maximum run time.                  |
| FAILURE         | Request not completed due to one or more failures encountered by the scheduler.     |
| CANCEL_COMPLETE | Request has been canceled by the background cleaner.                           |
{:.table}

Malformed or invalid queries provided in the Async request will finish with COMPLETE status and the actual error message will be
available in the `result` property of AsyncQuery and TableExport models.

## Security

The Async API models (AsyncQuery and TableExport) have a simple permission model: Only the principal who submitted a query and principals which belong to an administrative role are allowed to retrieve its status or results. Principals can be assigned roles when constructing the Elide [user]({{site.baseurl}}/pages/guide/v{{ page.version }}/03-security.html#user) object.

## Enable the Async API

By default the async API is disabled. The elide models (AsyncQuery and TableExport) needed to support the Async API are JPA [models][demo-schema] that are mapped to a specific database schema. This schema must be created in your target database. Feel free to modify the query/result column sizes per your needs.

| Configuration       | Description                                                                                | Default  |
| ---------------     | -------------------------------------------------------------------------------------      | -------  |
| enabled             | Enable the Async API feature.                                                              | false    |
| cleanupEnabled      | Enable cleaning up of Async API requests history, update the status of interrupted/timedout requests, and cancel requests. | false    |
{:.table}

{% include code_example example="async-api-enable" %}

#### Additional Configuration

These additional configuration settings control timeouts, cleanup, export end-point, resultStorageEngine and the sizes of thread pools.

| Configuration                     | Description                                                             | Default  |
| ---------------                   | ----------------------------------------------------------------------- | -------  |
| threadPoolSize                    | Number of requests to run in parallel.                            | 5        |
| maxRunTimeSeconds                 | Maximum query run time for requests before TIMEDOUT.              | 3600       |
| maxAsyncAfterSeconds              | Maximum permissible value for `asyncAfterSeconds`.                | 10       |
| queryCleanupDays                  | Number of days to retain request executions and result history.   | 7        |
| queryCancellationIntervalSeconds  | A background cleaner is responsible for canceling the transactions for requests marked as CANCELLED and changing the status to CANCEL_COMPLETE. Polling interval to identify CANCELLED requests and update status. | 300 |
| enableExport                      | Enable the TableExport feature i.e. request submission, download. | false   |
| exportApiPathSpec                 | API root path specification for the export end-point.             | /export |
| skipCSVHeader                     | Skip Header Record when exporting as CSV.                         | false   |
| storageDestination                | Location to persist export results through the default ResultStorageEngine. | /tmp  |
{:.table}

These additional configuration settings are only applicable for Elide's Standalone module. When using Spring, please configure the TaskExecutor used by Spring MVC for executing and managing the asynchronous requests.

| Configuration                     | Description                                                              | Default  |
| ---------------                   | -----------------------------------------------------------------------  | -------  |
| exportAsyncResponseTimeoutSeconds | Default timeout for TableExport's result download end-point.                | 30      |
| exportAsyncResponseExecutor       | Executor for executing TableExport's result download request asynchronously.| A java.util.concurrent.ExecutorService instance|
{:.table}

{% include code_example example="async-api-additional-config" %}

## Running

After configuring and starting your service, the following commands illustrate how to make asynchronous requests. Don’t forget to replace localhost:8080 with your URL. The example below makes use of the models and sample data that the liquibase migrations added through our example is [available here][elide-demo].

#### Submitting query

{% include code_example example="async-api-submit" %}

Here are the respective responses:

{% include code_example example="async-api-submit-rsp" %}

#### Retrieving status and result

Long running queries in the QUEUED or PROCESSING state may not return with the `result` property populated in the responses above. The client can poll the AsyncQuery and TableExport objects asynchronously for status updates.

{% include code_example example="async-api-status" %}

Here are the respective responses:

{% include code_example example="async-api-status-rsp" %}

#### Downloading the TableExport results

The TableExport request will return a URL to download the results as shown in the example response below.

{% include code_example example="table-export-download-results" %}

## Overriding the AsyncAPIDAO

The Async API interacts with the persistence layer through an abstraction - the AsyncAPIDAO, for status updates, query cleanup, etc. This can be customized by providing your own implementation. Elide provides a default implementation of [AsyncAPIDAO][default-async-api-dao].

{% include code_example example="async-api-dao-disabled" %}

## Overriding the ResultStorageEngine

Table exports leverage a reactive abstraction (ResultStorageEngine) for streaming results to and from a persistence backend. This can be customized by providing your own implementation. Elide provides default implementation of [ResultStorageEngine][file-result-storage-engine].

{% include code_example example="async-api-storageengine-disabled" %}

<!---TODO replace below links when merged to master --->
[demo-schema]: {{site.baseurl}}/pages/guide/v{{ page.version }}/11.5-asyncapi.html#enable-the-async-api
[file-result-storage-engine]: https://github.com/yahoo/elide/blob/master/elide-async/src/main/java/com/yahoo/elide/async/service/storageengine/FileResultStorageEngine.java
[default-async-api-dao]: https://github.com/yahoo/elide/blob/master/elide-async/src/main/java/com/yahoo/elide/async/service/dao/DefaultAsyncAPIDAO.java
[elide-demo]: {{site.baseurl}}/pages/guide/v{{ page.version }}/11.5-asyncapi.html#running
